--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
             display: inline-block;
             width: 100px;
         }
+        
+        /* Štýly pre sekciu obrázkov na konci */
+        .image-footer {
+            text-align: center;
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid #ccc;
+        }
+
+        .image-footer img {
+            margin: 0 15px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 5px;
+            height: auto; /* Zabezpečí proporčné zmenšenie */
+        }
     </style>
 </head>
 <body>
@@ -149,6 +165,10 @@
             <p><strong>Email:</strong> <a href="mailto:ulicnyrichard07@gmail.com">ulicnyrichard07@gmail.com</a></p>
         </section>
         
+        <div class="image-footer">
+            <img src="images.jpeg" alt="Logo školy Sečovce" width="100" />
+            <img src="lekos.png" alt="Logo lekos" width="100" /> </div>
+
     </div>
 
 </body>
